# dsmc

./: .gitignore  README.md  action_diversity.json  episode_length.json  goal_reaching_probability.json  grp.json  normalized_return.json  pyproject.toml  requirements.txt  return.json  setup.sh  state_coverage.json
.github/workflows/: publish.yml
dsmc/: eval_results.py  evaluator.py  example.py  property.py  statistics.py
dsmc/example_json_files/: action_diversity.json  action_taken.json  action_variety.json  custom_interval_return.json  early_termination.json  goal_before_step_limit.json  goal_reaching_probability.json  normalized_return.json  path_length_efficiency.json  return.json  state_coverage.json  state_transition_smoothness.json
dsmc_tool/: eval_results.py  evaluator.py  example.py  property.py  statistics.py
dsmc_tool/example_json_files/: action_entropy.json  action_threshold.json  all_return.json  consecutive_same_action.json  episode_length.json  interim_all_return.json  interim_return.json  path_efficiency.json  return_threshold.json  reward_to_length_ratio.json  reward_variance.json  standard_return.json
tests/: example.py  test_eval_results.py  test_evaluator.py  test_property.py  test_statistics.py
