[tool.poetry]
name = "dsmc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.14.1"
gymnasium = "0.28.1"
stable-baselines3 = "^2.3.2"
pgtg = "^0.4.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
